<resources>
    <string name="app_name">FridgeMangementCS210Group2</string>
    <string name="name_of_the_fridge">Name of the Fridge</string>
    <string name="name_of_the_food">Name of the Food</string>
    <string name="open_fridge">Open Fridge</string>
    <string name="example">Example</string>
    <string name="enter_fridge_name">Enter Fridge Name</string>
    <string name="add">Add</string>
    <string name="delete_checked">Delete Checked</string>
    <string name="enter_food_name">Enter Food Name</string>
    <string name="scanFood">Scan Label</string>
    <string name="amount">1</string>
    <string name="webclient_id">488153330962-fjpml0b57ki5rsjs2uujee7hmsqr68ba.apps.googleusercontent.com</string>
</resources>