<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="80dp"
                                                   android:paddingStart="8dp"
                                                   android:paddingEnd="8dp">
    <TextView
            android:id="@+id/tvFridgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example"
            android:hint="@string/name_of_the_fridge"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:id="@+id/btnSeeItems"
            android:text="@string/open_fridge"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cbDone"/>
    <CheckBox
            android:id="@+id/cbDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>