<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFridges"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/etFridgeName"/>
    <EditText
            android:id="@+id/etFridgeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_fridge_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAddFridge"
            app:layout_constraintStart_toStartOf="parent" android:inputType="text" android:importantForAutofill="no"/>
    <Button
            android:id="@+id/btnAddFridge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDeleteFridge"/>
    <Button
            android:id="@+id/btnDeleteFridge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_checked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
